# md5explorer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: index.md  usage.md  usefull.md
src/md5explorer/: __init__.py  __main__.py  cli.py
src/md5explorer/commands/: __init__.py  db_cmds.py  scan_cmds.py
src/md5explorer/core/: __init__.py  hashing.py  models.py  utils.py
src/md5explorer/db/: __init__.py  compare.py  index.py  manager.py
src/md5explorer/scan/: __init__.py  compare.py  diff_lists.py  duplicates.py  empty_dirs.py  inventory.py
tests/: conftest.py  test_cli.py  test_compare.py  test_db_index.py  test_duplicates.py  test_empty_dirs.py  test_hashing.py  test_inventory.py
